# checkpoint

./: .gitignore
apps/macos/AgentAspect/Sources/AgentAspect/Models/: BridgeStatusModel.swift
apps/macos/AgentAspect/Sources/AgentAspect/Services/: AgentAspectPaths.swift  BinaryLocator.swift
apps/macos/AgentAspect/scripts/: smoke-mac-shell.sh
apps/tauri/AgentAspect/src/: index.html  main.js  style.css
apps/tauri/AgentAspect/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/tauri/AgentAspect/src-tauri/src/: binary_locator.rs  bridge.rs  lib.rs  main.rs  paths.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: auth.rs  context.rs  jobs.rs  lib.rs  main.rs  provider.rs  relay_client.rs  routes.rs  scanner.rs  sse.rs  ui.rs  workflows.rs
crates/bridge/src/ui/: app.js  index.html  styles.css
crates/bridge/src/ui/tabs/: conversations.js  events.js  home.js  hooks.js  run.js  workflows.js
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: audit.rs  bridge.rs  conversations.rs  daemon.rs  doctor.rs  hooks.rs  init.rs  launchd.rs  mod.rs  mode.rs  rules.rs  status.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  audit.rs  config.rs  constants.rs  env_compat.rs  error.rs  hook_status.rs  learn.rs  lib.rs  normalize.rs  password.rs  paths.rs  process_guard.rs  provider_registry.rs  provider_resolver.rs  provider_scanner.rs  runtime_profile.rs  transcript.rs  transcript_sync.rs  user_password.rs  wire.rs
crates/core/src/store/: conversations.rs  decisions.rs  devices.rs  events.rs  feedback.rs  jobs.rs  messages.rs  mod.rs  suggestions.rs  users.rs  workflows.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/hook-cli/: Cargo.toml
crates/hook-cli/src/: main.rs
crates/relay/: Cargo.toml
crates/relay/src/: auth.rs  beat.rs  http.rs  lib.rs  main.rs  mobile_ui.rs  register.rs  server.rs  token.rs  ws.rs
crates/relay/src/ui/: app.js  app_test.js  style.css
crates/shared_ui/: activity_segment.js  api_client.js  approval_review.js  design_tokens.css  job_status.js  provider_capabilities.js  runtime_health.js  view_model.js
crates/shared_ui/tests/: activity_segment_test.js  approval_review_test.js  job_status_test.js  provider_capabilities_test.js  runtime_health_test.js  view_model_test.js
docs/: CODE_MAP.md  config.md  plan-m48-product-architecture-roadmap.md  relay.md  security.md  shared-ui-inventory-m49.md
notes/handoff/: 2026-05-06-1430-claude-m43-conversation-review-ux.md
scripts/: bridge_smoke_test.sh  relay_smoke_test.sh
