[package]
name = "agent-aspect-bridge"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "agent_aspect_bridge"
path = "src/lib.rs"

[[bin]]
name = "agent-aspect-bridge"
path = "src/main.rs"

[dependencies]
agent-aspect-core = { path = "../core" }
tiny_http = "0.12"
serde_json = "1"
getrandom = "0.3"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }
libc = "0.2"
sha2 = "0.10"
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
