[package]
name = "agent-aspect-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "agent_aspect_cli"
path = "src/lib.rs"

[[bin]]
name = "agent-aspect"
path = "src/main.rs"

[dependencies]
agent-aspect-core = { path = "../core" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
libc = "0.2"
chrono = "0.4"
rpassword = "7"
atty = "0.2"
