[package]
name = "agent-aspect-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
toml = "0.8"
thiserror = "2"
shlex = "1.3"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
argon2 = "0.5.3"
getrandom = "0.4.2"
