[package]
name = "agent-aspect-relay"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "agent-aspect-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
chrono = "0.4"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.3"

[build-dependencies]
chrono = "0.4"
