[package]
name = "agent-aspect"
version = "0.1.0"
edition = "2021"
description = "Agent Aspect Desktop Shell"

[workspace]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
